added extra comment

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
     </section>
 
-
+<!-- arjun the great is my name and today i have roasted prveen shrama -->
     <footer class="backgroun">
         <p class="text-footer">
             Copyright &copy; 2025 www.education.com - All Rights Reserved
